Rama Master commit 3: header home. UIkit agregado

--- a/imports/ui/pages/home.html
+++ b/imports/ui/pages/home.html
@@ -1,3 +1,16 @@
 <template name="home">
-  <h4> Welcome to Kinder Pets! </h4>
+  <section class="ed-container container-total home-header">
+    <div class="ed-item base-100 item-no-padding">
+      <nav class="uk-navbar home-navbar">
+        <a href="#" class="uk-navbar-brand"><img src="logo.png" alt="" /></a>
+        <ul class="uk-navbar-nav desde-tablet">
+          <li><a href="#" class="anchor-item-nav-home"> Home </a></li>
+          <li><a href="#" class="anchor-item-nav-home"> Blog </a></li>
+          <li><a href="#" class="anchor-item-nav-home"> Regístrate </a></li>
+          <li><a href="#" class="anchor-item-nav-home"> Ingresa </a></li>
+        </ul> <!-- uk-navbar-nav -->
+        <a href="" class="uk-navbar-toggle uk-navbar-flip hasta-tablet"></a>
+      </nav> <!-- uk-navbar -->
+    </div> <!-- ed-item -->
+  </section> <!-- ed-container -->
 </template>
