Rama Master commit 5: secciones de info y servicios agregadas al home. Header mejorado

--- a/imports/ui/pages/home.html
+++ b/imports/ui/pages/home.html
@@ -1,8 +1,10 @@
 <template name="home">
+  <!-- ============================== home header ============================== -->
   <section class="ed-container container-total home-header">
     <div class="ed-item base-100 item-no-padding">
       <nav class="uk-navbar home-navbar">
-        <a href="#" class="uk-navbar-brand"><img src="logo.png" alt="" /></a>
+        <a href="#" class="uk-navbar-brand"><img src="logo1.svg" class="logotype" alt="" /></a>
+        <!--<a href="#" class="uk-navbar-brand"><img src="logo.png" alt="" /></a>-->
         <ul class="uk-navbar-nav desde-tablet">
           <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-home"></i> Home </a></li>
           <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-file-text"></i> Blog </a></li>
@@ -21,5 +23,80 @@
         </div> <!-- uk-offcanvas-bar -->
       </div> <!-- uk-offcanvas -->
     </div> <!-- ed-item -->
+  </section> <!-- ed-container -->
+
+
+  <!-- ============================== home information ============================== -->
+  <section class="ed-container home-information">
+    <div class="ed-item base-100 item-content-center">
+      <h2 class="title-home-information"> ¿Qué es Kinder Pets? </h2>
+    </div> <!-- ed-item -->
+
+    <div class="ed-item base-100 tablet-1-3 item-content-center">
+      <img src="monitor.svg" class="icon-home-information" alt="" />
+      <p class="text-icon-information"> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+    </div> <!-- ed-item -->
+
+    <div class="ed-item base-100 tablet-1-3 item-content-center">
+      <img src="footprint.svg" class="icon-home-information" alt="" />
+      <p class="text-icon-information"> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+    </div> <!-- ed-item -->
+
+    <div class="ed-item base-100 tablet-1-3 item-content-center">
+      <img src="luggage.svg" class="icon-home-information" alt="" />
+      <p class="text-icon-information"> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+    </div> <!-- ed-item -->
+  </section> <!-- ed-container -->
+
+
+  <!-- ============================== home services ============================== -->
+  <section class="ed-container container-total home-services">
+    <div class="ed-container container-total item-dark-backg">
+      <div class="ed-item base-100 item-content-center">
+        <h2 class="title-home-services"> Nuestros asociados ofrecen a tu mascota: </h2>
+      </div> <!-- ed-item -->
+
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+        <img src="pet-hotel-1.svg" class="icon-home-services" alt="" />
+        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+      </div> <!-- ed-item -->
+
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+        <img src="pet-hotel-2.svg" class="icon-home-services" alt="" />
+        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+      </div> <!-- ed-item -->
+
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+        <img src="pet-hotel-3.svg" class="icon-home-services" alt="" />
+        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+      </div> <!-- ed-item -->
+
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+        <img src="pet-hotel-4.svg" class="icon-home-services" alt="" />
+        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+      </div> <!-- ed-item -->
+
+
+      <!-- second group -->
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+        <img src="pet-hotel-1.svg" class="icon-home-services" alt="" />
+        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+      </div> <!-- ed-item -->
+
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+        <img src="pet-hotel-2.svg" class="icon-home-services" alt="" />
+        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+      </div> <!-- ed-item -->
+
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+        <img src="pet-hotel-3.svg" class="icon-home-services" alt="" />
+        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+      </div> <!-- ed-item -->
+
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+        <img src="pet-hotel-4.svg" class="icon-home-services" alt="" />
+        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+      </div> <!-- ed-item -->
+    </div> <!-- ed-container (si existen problemas, sacar los ed.item de este ed-container y asignarles la clase item-dark-backg) -->
   </section> <!-- ed-container -->
 </template>
