Rama Master commit 6: home avanzado

--- a/imports/ui/pages/home.html
+++ b/imports/ui/pages/home.html
@@ -6,13 +6,16 @@
         <a href="#" class="uk-navbar-brand"><img src="logo1.svg" class="logotype" alt="" /></a>
         <!--<a href="#" class="uk-navbar-brand"><img src="logo.png" alt="" /></a>-->
         <ul class="uk-navbar-nav desde-tablet">
-          <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-home"></i> Home </a></li>
-          <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-file-text"></i> Blog </a></li>
-          <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-users"></i> Regístrate </a></li>
-          <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-sign-in"></i> Ingresa </a></li>
+          <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-home"></i> HOME </a></li>
+          <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-file-text"></i> BLOG </a></li>
+          <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-users"></i> REGÍSTRATE </a></li>
+          <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-sign-in"></i> INGRESA </a></li>
         </ul> <!-- uk-navbar-nav -->
         <a href="#left-side-navbar" data-uk-offcanvas class="uk-navbar-toggle uk-navbar-flip hasta-tablet"></a>
       </nav> <!-- uk-navbar -->
+
+      <h2 class="message-home-header"> Bienvenido a Kinder Pets</h2>
+      <p class="message-home-header"> Tu mascota lo merece </p>
 
       <div id="left-side-navbar" class="uk-offcanvas">
         <div class="uk-navbar-nav uk-offcanvas-bar">
@@ -32,19 +35,24 @@
       <h2 class="title-home-information"> ¿Qué es Kinder Pets? </h2>
     </div> <!-- ed-item -->
 
-    <div class="ed-item base-100 tablet-1-3 item-content-center">
+    <div class="ed-item base-100 tablet-25 item-content-center">
       <img src="monitor.svg" class="icon-home-information" alt="" />
-      <p class="text-icon-information"> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+      <p class="text-icon-information"> Lorem ipsum dolor sit amet, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
     </div> <!-- ed-item -->
 
-    <div class="ed-item base-100 tablet-1-3 item-content-center">
+    <div class="ed-item base-100 tablet-25 item-content-center">
       <img src="footprint.svg" class="icon-home-information" alt="" />
-      <p class="text-icon-information"> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+      <p class="text-icon-information"> Lorem ipsum dolor sit amet, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
     </div> <!-- ed-item -->
 
-    <div class="ed-item base-100 tablet-1-3 item-content-center">
+    <div class="ed-item base-100 tablet-25 item-content-center">
       <img src="luggage.svg" class="icon-home-information" alt="" />
-      <p class="text-icon-information"> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+      <p class="text-icon-information"> Lorem ipsum dolor sit amet, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+    </div> <!-- ed-item -->
+
+    <div class="ed-item base-100 tablet-25 item-content-center">
+      <img src="user.svg" class="icon-home-information" alt="" />
+      <p class="text-icon-information"> Lorem ipsum dolor sit amet, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
     </div> <!-- ed-item -->
   </section> <!-- ed-container -->
 
@@ -56,47 +64,108 @@
         <h2 class="title-home-services"> Nuestros asociados ofrecen a tu mascota: </h2>
       </div> <!-- ed-item -->
 
-      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center item-extra-side-padding"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
         <img src="pet-hotel-1.svg" class="icon-home-services" alt="" />
-        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+        <h3 class="subtitle-home-services"> Lorem ipsum dolor </h3>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
       </div> <!-- ed-item -->
 
-      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center item-extra-side-padding"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
         <img src="pet-hotel-2.svg" class="icon-home-services" alt="" />
-        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+        <h3 class="subtitle-home-services"> Lorem ipsum dolor </h3>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
       </div> <!-- ed-item -->
 
-      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center item-extra-side-padding"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
         <img src="pet-hotel-3.svg" class="icon-home-services" alt="" />
-        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+        <h3 class="subtitle-home-services"> Lorem ipsum dolor </h3>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
       </div> <!-- ed-item -->
 
-      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center item-extra-side-padding"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
         <img src="pet-hotel-4.svg" class="icon-home-services" alt="" />
-        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+        <h3 class="subtitle-home-services"> Lorem ipsum dolor </h3>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
       </div> <!-- ed-item -->
 
 
       <!-- second group -->
-      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center item-extra-side-padding"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
         <img src="pet-hotel-1.svg" class="icon-home-services" alt="" />
-        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+        <h3 class="subtitle-home-services"> Lorem ipsum dolor </h3>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
       </div> <!-- ed-item -->
 
-      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center item-extra-side-padding"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
         <img src="pet-hotel-2.svg" class="icon-home-services" alt="" />
-        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+        <h3 class="subtitle-home-services"> Lorem ipsum dolor </h3>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
       </div> <!-- ed-item -->
 
-      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center item-extra-side-padding"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
         <img src="pet-hotel-3.svg" class="icon-home-services" alt="" />
-        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+        <h3 class="subtitle-home-services"> Lorem ipsum dolor </h3>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
       </div> <!-- ed-item -->
 
-      <div class="ed-item base-100 movil-50 tablet-25 item-content-center"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
+      <div class="ed-item base-100 movil-50 tablet-25 item-content-center item-extra-side-padding"> <!-- existe un problema en resoluciones muy pequeñas. se debe probar y corregir -->
         <img src="pet-hotel-4.svg" class="icon-home-services" alt="" />
-        <p> Lorem ipsum dolor sit amet. Excepteur sint occaecat cupidatat non proident. </p>
+        <h3 class="subtitle-home-services"> Lorem ipsum dolor </h3>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
       </div> <!-- ed-item -->
     </div> <!-- ed-container (si existen problemas, sacar los ed.item de este ed-container y asignarles la clase item-dark-backg) -->
   </section> <!-- ed-container -->
+
+
+  <!-- ============================== home buttons ============================== -->
+  <section class="ed-container container-total home-bottom">
+    <div class="ed-item base-100 tablet-40 container-icon-home-bottom">
+      <img src="img1.png" alt="" class="icon-home-bottom"/>
+    </div> <!-- ed-item -->
+
+    <div class="ed-item base-100 tablet-60">
+      <h3 class="title-home-bottom"> ¿Quieres saber más? </h3>
+      <p class="text-home-bottom"> Si tienes una mascota y te interesa nuestro servicio, o si quieres formar parte de nuestro equipo de asociados, ¡adelante, regístrate!  </p>
+      <!--<span class="button-home-bottom"><i class="uk-icon-user uk-icon-large"></i></span>-->
+      <div class="ed-container">
+        <div class="ed-item base-100 tablet-1-3 container-link-home-bottom">
+          <img src="user.svg" class="link-home-bottom" alt="" />
+          <h5 class="text-link-home-bottom"> Lorem ipsum dolor </h5>
+        </div>
+
+        <div class="ed-item base-100 tablet-1-3 container-link-home-bottom">
+          <img src="user.svg" class="link-home-bottom" alt="" />
+          <h5 class="text-link-home-bottom"> Lorem ipsum dolor </h5>
+        </div>
+
+        <div class="ed-item base-100 tablet-1-3 container-link-home-bottom">
+          <img src="user.svg" class="link-home-bottom" alt="" />
+          <h5 class="text-link-home-bottom"> Lorem ipsum dolor </h5>
+        </div>
+
+      </div>
+    </div> <!-- ed-item -->
+  </section> <!-- ed-container -->
+
+
+  <!-- ============================== Footer ============================== -->
+  <footer class="ed-container container-total home-footer">
+    <div class="ed-item base-100 tablet-25">
+      <img src="logo1.svg" class="icon-home-footer" alt="" />
+    </div> <!-- ed-item -->
+
+    <div class="ed-item base-100 tablet-25">
+      Soy un nuevo elemento del footer
+    </div> <!-- ed-item -->
+
+    <div class="ed-item base-100 tablet-25">
+      Soy un nuevo elemento del footer
+    </div> <!-- ed-item -->
+
+    <div class="ed-item base-100 tablet-25">
+      Soy un nuevo elemento del footer
+    </div> <!-- ed-item -->
+
+  </footer>
+
 </template>
