--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,9 @@
 <head>
   <title>KinderPets</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma" rel="stylesheet">
 </head>
 
 <body>
