--- a/imports/ui/pages/home.html
+++ b/imports/ui/pages/home.html
@@ -8,8 +8,8 @@
         <ul class="uk-navbar-nav desde-tablet">
           <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-home"></i> HOME </a></li>
           <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-file-text"></i> BLOG </a></li>
-          <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-users"></i> REGÍSTRATE </a></li>
-          <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-sign-in"></i> INGRESA </a></li>
+          <li><a href="#signupModal" data-uk-modal class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-users"></i> REGÍSTRATE </a></li>
+          <li><a href="#loginModal" data-uk-modal class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-sign-in"></i> INGRESA </a></li>
         </ul> <!-- uk-navbar-nav -->
         <a href="#left-side-navbar" data-uk-offcanvas class="uk-navbar-toggle uk-navbar-flip hasta-tablet"></a>
       </nav> <!-- uk-navbar -->
@@ -165,7 +165,8 @@
     <div class="ed-item base-100 tablet-25">
       Soy un nuevo elemento del footer
     </div> <!-- ed-item -->
-
   </footer>
 
+  {{>signup}}
+  {{>login}}
 </template>
