--- a/imports/ui/pages/home.html
+++ b/imports/ui/pages/home.html
@@ -9,6 +9,7 @@
           <li> Placeholder Testing </li>
           <li> Placeholder Testing 2 </li>
           <li> TESTING 3 FROM OWNER </li>
+          <li> TESTING 4 FROM OWNER </li>
           <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-home"></i> HOME </a></li>
           <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-file-text"></i> BLOG </a></li>
           <li><a href="#signupModal" data-uk-modal class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-users"></i> REGÍSTRATE </a></li>
