Change 1 from de contributor

--- a/imports/ui/pages/home.html
+++ b/imports/ui/pages/home.html
@@ -6,6 +6,7 @@
         <a href="#" class="uk-navbar-brand"><img src="logo1.svg" class="logotype" alt="" /></a>
         <!--<a href="#" class="uk-navbar-brand"><img src="logo.png" alt="" /></a>-->
         <ul class="uk-navbar-nav desde-tablet">
+          <li> Changes 1 from de contributor </li>
           <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-home"></i> HOME </a></li>
           <li><a href="#" class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-file-text"></i> BLOG </a></li>
           <li><a href="#signupModal" data-uk-modal class="anchor-item-nav-home js-event-anchor-nav"> <i class="uk-icon-users"></i> REGÍSTRATE </a></li>
